# test-genIA

./: .env  .gitignore  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
java-api-gateway/: .dockerignore  Dockerfile  README.md  pom.xml
java-api-gateway/src/main/java/com/genia/gateway/: Application.java
java-api-gateway/src/main/java/com/genia/gateway/controller/: GeniaController.java
java-api-gateway/src/main/java/com/genia/gateway/model/: QueryResponse.java
java-api-gateway/src/main/java/com/genia/gateway/service/: GeniaService.java
java-api-gateway/src/main/resources/: application.yml
postman/: GenIA-Environment.postman_environment.json  GenIA-Integration.postman_collection.json  README.md
python-genia-service/: .coverage  .dockerignore  .env  .env.example  Dockerfile  README.md  coverage.xml  fix_linting.py  pyproject.toml  run.py  setup_dependencies.sh
python-genia-service/src/: __init__.py  config.py  logging_config.py  main.py  models.py  services.py
python-genia-service/tests/: __init__.py  conftest.py  test_config.py  test_logging.py  test_main.py  test_models.py  test_services.py
