[project]
name = "genia-service"
version = "0.1.0"
description = "Servicio de integración con GenIA API"
authors = [
    {name = "Christian Rojas",email = "christianrojas.datascience@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "phonenumbers (>=9.0.6,<10.0.0)",
    "google-genai (>=1.19.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
bandit = "^1.8.3"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
memory-profiler = "^0.61.0"
line-profiler = "^4.2.0"

